--- a/plonetheme/onegovbear/theme/scss/datagridwidget.scss
+++ b/plonetheme/onegovbear/theme/scss/datagridwidget.scss
@@ -39,7 +39,7 @@ table.datagridwidget-table-view {
             }
         }
         div.error {
-            color: darken($danger-color, 20%);
+            color: darken($color-danger, 20%);
         }
 
     }
