--- a/plonetheme/onegovbear/theme/scss/globalnav.scss
+++ b/plonetheme/onegovbear/theme/scss/globalnav.scss
@@ -1,8 +1,8 @@
-$globalnav-bg-color: $gray-light !default;
-$globalnav-bg-color-hover: $gray-dark !default;
-$globalnav-link-color: $gray-lighter !default;
+$globalnav-bg-color: $color-gray-light !default;
+$globalnav-bg-color-hover: $color-gray-dark !default;
+$globalnav-link-color: $color-gray-light !default;
 $globalnav-link-color-hover: $globalnav-link-color !default;
-$globalnav-separator-color: $gray !default;
+$globalnav-separator-color: $color-gray-dark !default;
 $globalnav-separator-width: 1px !default;
 $globalnav-font-size: 16px !default;
 $globalnav-link-font-weight: normal !default;
