--- a/plonetheme/onegovbear/theme/scss/languageselector.scss
+++ b/plonetheme/onegovbear/theme/scss/languageselector.scss
@@ -1,4 +1,4 @@
-$language-selector-link-color: $secondary-color !default;
+$language-selector-link-color: $color-secondary !default;
 
 
 @include declare-variables(
