--- a/plonetheme/onegovbear/theme/scss/menues.scss
+++ b/plonetheme/onegovbear/theme/scss/menues.scss
@@ -1,5 +1,5 @@
 $menu-bg-color: #fff !default;
-$menu-link-color: $gray-darker !default;
+$menu-link-color: $color-gray-dark !default;
 $menu-bg-color-hover: darken($menu-bg-color, 5%) !default;
 $menu-link-color-hover: darken($menu-link-color, 5%) !default;
 $menu-border-color: darken($menu-bg-color, 20%) !default;
