--- a/plonetheme/onegovbear/theme/scss/print.scss
+++ b/plonetheme/onegovbear/theme/scss/print.scss
@@ -87,8 +87,8 @@
 
 
   a, a:hover, a:visited, a:active {
-   color: $link-color !important;
-   text-decoration: $link-decoration !important;
+   color: $color-link !important;
+   text-decoration: $text-decoration-link !important;
   }
 
   img,
