--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -1,4 +1,4 @@
-$text-color-light: desaturate(lighten($text-color, 25%), 100%) !default;
+$text-color-light: desaturate(lighten($color-text, 25%), 100%) !default;
 $mark-broken-links: true !default;
 
 @include declare-variables(
@@ -8,12 +8,12 @@ $mark-broken-links: true !default;
 a,
 :link,
 :visited {
-  color: $link-color;
-  text-decoration: $link-decoration;
-  font-weight: $link-font-weight;
+  color: $color-link;
+  text-decoration: $text-decoration-link;
+  font-weight: $font-weight-link;
   &:hover {
-    color: $link-hover-color;
-    text-decoration: $link-hover-decoration;
+    color: $color-link-hover;
+    text-decoration: $text-decoration-link-hover;
   }
 }
 
@@ -71,7 +71,7 @@ dl.collapsible {
 }
 
 .documentByLine {
-  color: $light-text-color;
+  color: $color-text-inverted;
   margin-bottom: 1em;
 }
 
@@ -84,18 +84,18 @@ dl.collapsible {
     display: none;
   }
   a {
-    @include label($primary-color);
+    @include label($color-primary);
   }
 }
 
 
 @if $mark-broken-links {
   a.broken-link {
-    outline: 2px dotted $danger-color;
+    outline: 2px dotted $color-danger;
     @extend .fa-icon;
     @extend .fa-exclamation-triangle;
     &:before {
-      color: $danger-color;
+      color: $color-danger;
     }
   }
 }
