--- a/plonetheme/onegovbear/theme/scss/messages.scss
+++ b/plonetheme/onegovbear/theme/scss/messages.scss
@@ -1,6 +1,6 @@
-$portalmessage-info-color: lighten($context-color, 40%) !default;
-$portalmessage-warning-color: lighten($warning-color, 30%) !default;
-$portalmessage-error-color: lighten($danger-color, 20%) !default;
+$portalmessage-info-color: lighten($color-default, 40%) !default;
+$portalmessage-warning-color: lighten($color-warning, 30%) !default;
+$portalmessage-error-color: lighten($color-danger, 20%) !default;
 $portalmessage-undefined-color: #eee !default;
 $portalmessage-message-color: #fafafa !default;
 $portalmessage-border-color: #ccc !default;
@@ -34,7 +34,7 @@ dl.portalMessage, #content dl.portalMessage {
     padding: 0.4em 1em;
     display: table-cell;
     font-weight: normal;
-    @include borderradius($border-radius 0 0 $border-radius);
+    @include borderradius($border-radius-primary 0 0 $border-radius-primary);
     white-space: nowrap;
   }
 
@@ -50,7 +50,7 @@ dl.portalMessage, #content dl.portalMessage {
     background-color: $portalmessage-message-color;
     border: 1px solid $portalmessage-border-color;
     border-left-width: 0;
-    @include borderradius(0 $border-radius $border-radius 0);
+    @include borderradius(0 $border-radius-primary $border-radius-primary 0);
   }
 
 }
