--- a/plonetheme/onegovbear/theme/scss/portaltop.scss
+++ b/plonetheme/onegovbear/theme/scss/portaltop.scss
@@ -1,4 +1,4 @@
-$portal-top-bg-color: $page-bg-color !default;
+$portal-top-bg-color: $color-page-background !default;
 
 @include declare-variables(
   portal-top-bg-color);
@@ -10,7 +10,7 @@ $portal-top-bg-color: $page-bg-color !default;
   margin: 0 auto;
   position: relative;
   font-size: $font-size-small;
-  background-color: $primary-color;
+  background-color: $color-primary;
   @include clearfix();
 
   @include screen-large {
