--- a/plonetheme/onegovbear/theme/scss/portlet-calendar.scss
+++ b/plonetheme/onegovbear/theme/scss/portlet-calendar.scss
@@ -55,11 +55,11 @@ $calendar-portlet-bg-color: $portlet-column-bg-color !default;
     }
     .todayevent {
       background-color: $calendar-portlet-bg-color;
-      border: 1px solid $text-color;
+      border: 1px solid $color-text;
     }
     td.todaynoevent{
-      background-color: $content-bg-color;
-      border-color: $gray-light;
+      background-color: $color-content-background;
+      border-color: $color-gray-light;
     }
     td:hover { background-color: #FFF; }
     td a {
