--- a/plonetheme/onegovbear/theme/scss/portlets.scss
+++ b/plonetheme/onegovbear/theme/scss/portlets.scss
@@ -1,4 +1,4 @@
-$portlet-column-bg-color: $gray-lighter !default;
+$portlet-column-bg-color: $color-gray-light !default;
 
 @include declare-variables(
   portlet-column-bg-color);
@@ -60,8 +60,8 @@ $portlet-column-bg-color: $gray-lighter !default;
 
 
 .managedPortlet {
-  border: 1px solid $gray-light;
-  background-color: $gray-lighter;
+  border: 1px solid $color-gray-light;
+  background-color: $color-gray-light;
   @include borderradius();
   margin: 1em 0;
   overflow: hidden;
@@ -81,7 +81,7 @@ $portlet-column-bg-color: $gray-lighter !default;
     clear: both;
     text-decoration: none;
     padding: 0.5em;
-    background-color: $content-bg-color;
+    background-color: $color-content-background;
     &:hover {
       text-decoration: none;
     }
