--- a/plonetheme/onegovbear/theme/scss/typography.scss
+++ b/plonetheme/onegovbear/theme/scss/typography.scss
@@ -19,14 +19,6 @@ h4 {
   font-size: $font-size-h4;
 }
 
-h5 {
-  font-size: $font-size-h5;
-}
-
-h6 {
-  font-size: $font-size-h6;
-}
-
 p {
   margin-top: 0;
   margin-bottom: 1em;
@@ -59,7 +51,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  font-family: $font-family-base;
+  font-family: $font-family-primary;
 
   &.documentFirstHeading {
     margin-top: 0;
