--- a/plonetheme/onegovbear/theme/scss/editbar.scss
+++ b/plonetheme/onegovbear/theme/scss/editbar.scss
@@ -69,7 +69,7 @@ $editbar-link-font-weight: $font-weight-link !default;
 
       dd.actionMenuContent {
         border-top-width: 0;
-        @include borderradius(0 0 $menu-border-radius $menu-border-radius);
+        @include borderradius(0 0 $border-radius-primary $border-radius-primary);
         a {
             font-weight: $editbar-link-font-weight;
         }
