--- a/plonetheme/onegovbear/theme/scss/plone-datepicker.scss
+++ b/plonetheme/onegovbear/theme/scss/plone-datepicker.scss
@@ -1,8 +1,8 @@
-$plone-datepicker-bg-color: $menu-bg-color !default;
+$plone-datepicker-bg-color: $color-white !default;
 $plone-datepicker-heading-bg-color: darken($plone-datepicker-bg-color, 5%) !default;
 $plone-datepicker-hover-bg-color: darken($plone-datepicker-bg-color, 10%) !default;
-$plone-datepicker-border-color: $menu-border-color !default;
-$plone-datepicker-border-radius: $menu-border-radius !default;
+$plone-datepicker-border-color: $color-gray-light !default;
+$plone-datepicker-border-radius: $border-radius-primary !default;
 
 @include declare-variables(
   plone-datepicker-bg-color,
