Content overlaps the action menu.
Becuase the gridsytem uses relative position we have to
set a fixed z-index to make the action menu overlapping the content.

--- a/plonetheme/onegovbear/theme/scss/elements/menues.scss
+++ b/plonetheme/onegovbear/theme/scss/elements/menues.scss
@@ -1,6 +1,10 @@
 .actionMenu {
   margin: 0;
   position: relative;
+
+  /* Because the gridsystem uses relative position we have to set a fixed z-index for the actionMenu */
+  z-index: 1;
+
   &.activated {
     .actionMenuContent {
       display: block;
