Discreet text not visible with certain inverted text color.
Use light color instead to make the discreet text configurable.

--- a/plonetheme/onegovbear/theme/scss/form.scss
+++ b/plonetheme/onegovbear/theme/scss/form.scss
@@ -63,7 +63,7 @@ input[type="radio"] {
     @include requiredbox();
     font-weight: bold;
     .formHelp {
-      color: $color-text-inverted;
+      color: $color-text-light;
       display: block;
       margin: 0 0 0.2em 0;
       font-weight: normal;
