--- a/plonetheme/onegovbear/theme/scss/search.scss
+++ b/plonetheme/onegovbear/theme/scss/search.scss
@@ -118,7 +118,7 @@ $searchbox-width: 295px;
 
           > .LSDescr {
             padding-left: 1.5em;
-            color: $color-text-inverted;
+            color: $color-text-light;
           }
         }
       }
