Apply pagewrapper padding only to header if feature is enabled.
Remove pagewrapper padding for content area.

--- a/plonetheme/onegovbear/theme/scss/pagewrapper.scss
+++ b/plonetheme/onegovbear/theme/scss/pagewrapper.scss
@@ -23,5 +23,14 @@ $content-border-color: transparentize($gray, 50%) !default;
 
       @include borderradius-bottom-left(2 * $border-radius - $content-border-size);
     }
+
+    #header .logoRow {
+      padding: 10px 5px;
+    }
+
+    .portal-searchbox-wrapper {
+      padding: 5px 5px;
+    }
+
   }
 }
