Remove margin-top off al headings.
In the content area where we use those headings is no need for spacing before the actual heading. Spacing is done by the prev. paragraph or block. Same in the portlets area.

--- a/plonetheme/onegovbear/theme/scss/site/typography.scss
+++ b/plonetheme/onegovbear/theme/scss/site/typography.scss
@@ -7,7 +7,7 @@ body {
  */
 h1, h2, h3, h4 {
   font-family: $font-family-heading;
-  margin: 1.414em 0 0.5em;
+  margin-bottom: .5em;
   line-height: $line-height-base;
 }
 
