Fix direction and color  of editbar action menus.

--- a/plonetheme/onegovbear/theme/scss/site/editbar.scss
+++ b/plonetheme/onegovbear/theme/scss/site/editbar.scss
@@ -8,8 +8,12 @@
 }
 
 #contentActionMenus {
-  @include list-horizontal();
-  @include auto-text-color();
+  @include list-horizontal($direction: rtl);
+
+  .actionMenuHeader a {
+    @include auto-text-color($color-secondary);
+  }
+
 }
 
 #content-views {
