Apply button style to `managePortletsFallback` button.

--- a/plonetheme/onegovbear/theme/scss/elements/buttons.scss
+++ b/plonetheme/onegovbear/theme/scss/elements/buttons.scss
@@ -10,7 +10,8 @@ input.standalone {
 
 button.context,
 a.button.context,
-input.context {
+input.context,
+a.managePortletsFallback {
   @include button();
 }
 
