Add missing clearfix for the Simplelayout portlet.

--- a/plonetheme/onegovbear/theme/scss/portlets.scss
+++ b/plonetheme/onegovbear/theme/scss/portlets.scss
@@ -37,6 +37,7 @@ $portlet-column-bg-color: transparent !default;
   &.SimplelayoutPortlet {
     background-color: transparent;
     padding: 0;
+    @include clearfix;
   }
 
   .block-placeholder {
