--- a/plonetheme/onegovbear/theme/scss/site/typography.scss
+++ b/plonetheme/onegovbear/theme/scss/site/typography.scss
@@ -8,7 +8,7 @@ body {
 h1, h2, h3, h4 {
   font-family: $font-family-heading;
   margin-top: 0;
-  margin-bottom: .5em;
+  margin-bottom: $margin-heading-vertical;
   line-height: $line-height-base;
 }
 
@@ -36,7 +36,8 @@ h4 {
   Text
  */
 p {
-  margin-bottom: 1.3em;
+  margin-bottom: $margin-paragraph-vertical;
+  margin-top: 0;
 }
 
 .documentDescription {
