Mark managePortletsLink as a button.

--- a/plonetheme/onegovbear/theme/scss/elements/buttons.scss
+++ b/plonetheme/onegovbear/theme/scss/elements/buttons.scss
@@ -37,3 +37,7 @@ input[type="reset"][disabled],
 button[disabled] {
   @include button-disabled();
 }
+
+.managePortletsLink > a {
+  @include button();
+}
