--- a/plonetheme/onegovbear/theme/scss/site/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/site/layout.scss
@@ -11,6 +11,11 @@ body {
   color: $color-text;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .portaltype-plone-site {
   #breadcrumbs-wrapper {
     display: none;
