--- a/plonetheme/onegovbear/theme/scss/site/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/site/layout.scss
@@ -34,6 +34,10 @@ img {
   float: left;
 }
 
+#content-core {
+  @include clearfix();
+}
+
 #header {
   padding-bottom: $padding-vertical * 10;
   border-bottom: $padding-vertical solid $color-primary;
