Extend menues/languageselector scss by header/section tags to support menues without definition lists.

--- a/plonetheme/onegovbear/theme/scss/elements/menues.scss
+++ b/plonetheme/onegovbear/theme/scss/elements/menues.scss
@@ -29,8 +29,10 @@
 }
 
 
+#column-content section.actionMenu header,
 #column-content dl.actionMenu dt,
-dl.actionMenu dt {
+dl.actionMenu dt,
+section.actionMenu header {
   font-weight: normal;
 }
 
